test/algeff/nim.kk.out
test/algeff/nim.kk(244,30): error: invalid syntax
 unexpected identifier "g"
 expecting ":", "with", "->", "=" or "{"